--- a/Session1_Git/Task1_Portfolio/index.html
+++ b/Session1_Git/Task1_Portfolio/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero.png" alt="">
+                    <img src="img/SMpic.png" alt="" style="border-radius: 2.5%">
                 </div>
             </div>
             <div class="right-header">
